--- a/src/app/task-page/task-page.component.html
+++ b/src/app/task-page/task-page.component.html
@@ -26,8 +26,8 @@
     <div *ngIf="editing" class="task-info row">
       <div class="task-editing-left col-md-6">
         <div><b>Project: </b><a [routerLink]="['/projects', project.Id]">{{ project.Name }}</a></div>
-        <div><b>Status: </b><task-picker-component [pickType]="'status'" [initialTask]="task.StatusId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component></div>
-        <div><b>Type: </b><task-picker-component [pickType]="'type'" [initialTask]="task.TypeId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component></div>
+        <div><b>Status: </b><task-picker-component [type]="'status'" [arr]="staticData.ticketStatus" [initial]="task.StatusId" [chooseId]="chooseTaskId.bind(this)"></task-picker-component></div>
+        <div><b>Type: </b><task-picker-component [type]="'type'" [arr]='staticData.ticketType' [initial]="task.TypeId" [chooseId]="chooseTaskId.bind(this)"></task-picker-component></div>
         <div><b>Estimate: </b><input class="form-control" type="text" (ngModelChange)="onChange()" [(ngModel)]="edit.Estimate"/></div>
         <div><b>Start Date: </b><dp-date-picker (ngModelChange)="onChange()" [(ngModel)]="edit.StartDate"></dp-date-picker></div>
         <div><b>End Date: </b><dp-date-picker (ngModelChange)="onChange()" [(ngModel)]="edit.EndDate"></dp-date-picker></div>
