--- a/src/app/user-page/user-skills/user-skills.component.html
+++ b/src/app/user-page/user-skills/user-skills.component.html
@@ -1,5 +1,20 @@
 <div class="skills-component col-md-4 col-md-offset-1">
   <div class="row">
-    <skill-component *ngFor="let skill of skills" [skill]="skill" [EmployeeId]="employeeId" [updateSkill]="updateSkill.bind(this)"></skill-component>
+    <skill-component
+      *ngFor="let skill of skills"
+      [skill]="skill"
+      [EmployeeId]="employeeId"
+      [removeSkill]="deleteSkill.bind(this)"
+      [updateSkill]="updateSkill.bind(this)"></skill-component>
+      <skill-component
+        *ngIf="addingSkill"
+        [skill]="skill"
+        [EmployeeId]="employeeId"
+        [removeSkill]="deleteSkill.bind(this)"
+        [updateSkill]="updateSkill.bind(this)"
+        [addingSkill]="true"
+        [toggleAddingSkill]="toggleAddingSkill.bind(this)"
+        [addSkill]="addSkill.bind(this)"></skill-component>
   </div>
+  <div class="text-center"><button class="btn btn-primary" type="button" (click)="toggleAddingSkill()">Add Skill</button></div>
 </div>
