add ticket page, some refactor

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <div dnd-droppable class="col-md-offset-1 col-md-2 ticket-container" (onDropSuccess)="transferDataSuccess1($event)">
+  <h1 *ngIf="project" class="text-center">{{ project.Name }}</h1><button class="btn btn-primary" [routerLink]="['/ticket', projectId]">New ticket</button>
+  <div dnd-droppable class="col-md-offset-1 col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess1($event)">
+    <h3>Open</h3>
     <div *ngFor="let task of tasks">
       <div class="ticket" *ngIf="task.StatusId === 1" dnd-draggable [dragEnabled]="true" [dragData]="task">
         <div>{{ task.Name }}</div>
@@ -9,7 +11,8 @@
     </div>
   </div>
 
-  <div dnd-droppable class="col-md-2 ticket-container" (onDropSuccess)="transferDataSuccess2($event)">
+  <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess2($event)">
+    <h3>Development</h3>
     <div *ngFor="let task of tasks">
       <div class="ticket" *ngIf="task.StatusId === 2" dnd-draggable [dragEnabled]="true" [dragData]="task">
         <div>{{ task.Name }}</div>
@@ -19,7 +22,8 @@
     </div>
   </div>
 
-  <div dnd-droppable class="col-md-2 ticket-container" (onDropSuccess)="transferDataSuccess3($event)">
+  <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess3($event)">
+    <h3>Ready for QA</h3>
     <div *ngFor="let task of tasks">
       <div class="ticket" *ngIf="task.StatusId === 3" dnd-draggable [dragEnabled]="true" [dragData]="task">
         <div>{{ task.Name }}</div>
@@ -29,7 +33,8 @@
     </div>
   </div>
 
-  <div dnd-droppable class="col-md-2 ticket-container" (onDropSuccess)="transferDataSuccess4($event)">
+  <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess4($event)">
+    <h3>Test</h3>
     <div *ngFor="let task of tasks">
       <div class="ticket" *ngIf="task.StatusId === 4" dnd-draggable [dragEnabled]="true" [dragData]="task">
         <div>{{ task.Name }}</div>
@@ -39,7 +44,8 @@
     </div>
   </div>
 
-  <div dnd-droppable class="col-md-2 ticket-container" (onDropSuccess)="transferDataSuccess5($event)">
+  <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess5($event)">
+    <h3>Closed</h3>
     <div *ngFor="let task of tasks">
       <div class="ticket" *ngIf="task.StatusId === 5" dnd-draggable [dragEnabled]="true" [dragData]="task">
         <div>{{ task.Name }}</div>
