--- a/src/app/shared/layout/task-picker/task-picker.component.html
+++ b/src/app/shared/layout/task-picker/task-picker.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <select class="task-picker form-control" [(ngModel)]="chosenId" (ngModelChange)="onChange($event)">
-    <option *ngFor="let item of arr; let i = index" [ngValue]="i">{{ arr[i] }}</option>
+    <option *ngFor="let key of ObjectKeys(arr)" [ngValue]="key">{{ arr[key] }}</option>
   </select>
 
 </div>
