--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,10 +1,9 @@
 .ticket {
   border-radius: 4px;
   border: 1px solid #ccc;
+  margin-bottom: 10px;
 }
 
 .ticket-container {
   height: 500px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
 }
