--- a/src/app/user-page/user-info/user-info.component.html
+++ b/src/app/user-page/user-info/user-info.component.html
@@ -1,3 +1,4 @@
+<h1 class="text-center">{{ employee.FullName }}</h1>
 <div class="user-info-container col-md-offset-2 col-md-2" *ngIf="employee">
   <div><b>Birthday: </b>{{ employee.Birthday }}</div>
   <div><b>Email: </b>{{ employee.Email }}</div>
