--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -4,7 +4,9 @@
       <user-info-component [employeeId]="employeeId"></user-info-component>
       <user-skills-component [employeeId]="employeeId"></user-skills-component>
     </div>
-    <h4>Projects</h4>
-    <user-projects-component [employeeId]="employeeId"></user-projects-component>
+    <div class="row projects-container">
+      <h4>Projects</h4>
+      <user-projects-component [employeeId]="employeeId"></user-projects-component>
+    </div>
   </div>
 </div>
