--- a/src/app/user-page/user-projects/user-projects.component.html
+++ b/src/app/user-page/user-projects/user-projects.component.html
@@ -1,6 +1,8 @@
-<div class="project-container row" *ngFor="let project of projects">
-  <div><a [routerLink]="['/projects', project.Id]" class="text-info">{{ project.Name }}</a></div>
-  <div className="tasks-container">
-    <user-tasks-component [projectId]="project.Id" [employeeId]="employeeId"></user-tasks-component>
+<div class="col-md-12" *ngFor="let project of projects">
+  <div class="row">
+    <div class="project-name"><a [routerLink]="['/projects', project.Id]" class="text-info">{{ project.Name }}</a></div>
+    <div className="tasks-container">
+      <user-tasks-component [projectId]="project.Id" [employeeId]="employeeId"></user-tasks-component>
+    </div>
   </div>
 </div>
