--- a/src/app/user-page/user-skills/user-skills.component.html
+++ b/src/app/user-page/user-skills/user-skills.component.html
@@ -15,6 +15,6 @@
         [addingSkill]="true"
         [toggleAddingSkill]="toggleAddingSkill.bind(this)"
         [addSkill]="addSkill.bind(this)"></skill-component>
+        <div class="col-md-offset-4 col-md-2 skill-button"><button class="btn btn-primary" type="button" (click)="toggleAddingSkill()">{{ addingSkill ? 'Cancel' : 'Add Skill'}}</button></div>
   </div>
-  <div class="text-center"><button class="btn btn-primary" type="button" (click)="toggleAddingSkill()">{{ addingSkill ? 'Cancel' : 'Add Skill'}}</button></div>
 </div>
