--- a/src/app/project-page/team/team.component.html
+++ b/src/app/project-page/team/team.component.html
@@ -1,15 +1,21 @@
 <div *ngIf="!isSubmitting" class="team-container row">
-  <div class="col-md-2">Team</div>
-  <div class="col-md-offset-9">
-    <user-picker-component *ngIf="addUser" [filters]="members" [chooseUser]="chooseUser.bind(this)"></user-picker-component>
-    <button *ngIf="addUser" type="button" (click)="cancelAddUser()" class="btn btn-danger">X</button>
-    <button (click)="toggleAddUser()" type="button" class="btn btn-primary">Add to team</button>
+  <div class="head">
+    <div class="col-md-2"><h2>Team</h2></div>
+    <div class="col-md-offset-9">
+      <user-picker-component *ngIf="addUser" [filters]="members" [chooseUser]="chooseUser.bind(this)"></user-picker-component>
+      <button *ngIf="addUser" type="button" (click)="cancelAddUser()" class="btn btn-danger">X</button>
+      <button (click)="toggleAddUser()" type="button" class="btn btn-primary">Add to team</button>
+    </div>
   </div>
-  <div class="member-row row text-primary">
-    <span class="member-name col-md-3">Name</span>
-    <span class="member-position col-md-2">Position</span>
-    <span class="member-email col-md-3">Email</span>
-    <span class="member-skype col-md-3">Skype</span>
+  <div class="member-head col-md-12 text-primary">
+    <div class="row">
+      <span class="member-name col-md-3">Name</span>
+      <span class="member-position col-md-2">Position</span>
+      <span class="member-email col-md-3">Email</span>
+      <span class="member-skype col-md-3">Skype</span>
+    </div>
   </div>
-  <team-member-component *ngFor="let member of members" [removeMember]="removeMember.bind(this)" [member]="member"></team-member-component>
+  <div class="member col-md-12">
+    <team-member-component *ngFor="let member of members" [removeMember]="removeMember.bind(this)" [member]="member"></team-member-component>
+  </div>
 </div>
