--- a/src/app/user-page/user-skills/skill/skill.component.html
+++ b/src/app/user-page/user-skills/skill/skill.component.html
@@ -1,11 +1,12 @@
-<span *ngIf="!addingSkill" class="col-md-4"><b>{{ skill.Name }}</b></span>
-<span *ngIf="addingSkill" class="col-md-4">
-  <task-picker-component [arr]="staticData.skillName" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></task-picker-component>
-</span>
-<span class="col-md-4" *ngIf="!edit">{{ staticData.Level[skillLevelId] }}</span>
-<span *ngIf="edit" class="col-md-4">
-  <task-picker-component [arr]="staticData.Level" [initial]="skillLevelId" [chooseId]="updateLevel.bind(this)"></task-picker-component>
-</span>
-<span class="col-md-4"><button *ngIf="!edit" class="btn btn-primary" (click)="toggleEdit()">Edit</button></span>
-<button class="col-md-2" *ngIf="edit" class="btn btn-success" (click)="submitChanges()">Submit Changes</button>
-<button class="col-md-2" *ngIf="edit && !addingSkill" class="btn btn-danger" (click)="deleteSkill()">X</button>
+
+      <span *ngIf="!addingSkill" class="col-md-4 skill-name"><b>{{ skill.Name }}</b></span>
+      <span *ngIf="addingSkill" class="col-md-4 skill-name">
+        <task-picker-component [arr]="staticData.skillName" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></task-picker-component>
+      </span>
+      <span class="col-md-4 skill-level" *ngIf="!edit">{{ staticData.Level[skillLevelId] }}</span>
+      <span *ngIf="edit" class="col-md-4 skill-level">
+        <task-picker-component [arr]="staticData.Level" [initial]="skillLevelId" [chooseId]="updateLevel.bind(this)"></task-picker-component>
+      </span>
+  <div class="col-md-4" *ngIf="!edit"><button class="btn btn-default" (click)="toggleEdit()">Edit</button></div>
+  <div class="col-md-2" *ngIf="edit"><button class="btn btn-success" (click)="submitChanges()">Submit</button></div>
+  <div class="col-md-2" *ngIf="edit && !addingSkill"><button class="col-md-2" class="btn btn-danger" (click)="deleteSkill()">X</button></div>
