admin pages markup

--- a/src/app/projects-admin-page/projects-admin-page.component.css
+++ b/src/app/projects-admin-page/projects-admin-page.component.css
@@ -1,3 +1,11 @@
-input {
-  width: 100%;
+.project-head {
+  height: 40px;
+  line-height: 40px;
+  margin-top: 20px;
+  border-bottom: 1px solid #ccc;
+}
+
+.project-row {
+  border-top: 1px solid #ccc;
+  padding-top: 5px;
 }
