--- a/src/app/users-admin-page/users-admin-page.component.html
+++ b/src/app/users-admin-page/users-admin-page.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-offset-2 col-md-8">
     <div class="row">
       <div class="col-md-4">
-        <input type="text" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)" />
+        <input type="text" class="form-control" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)" />
       </div>
       <div class="col-md-3 col-md-offset-5">
         <button type="button" class="btn btn-primary pull-right" routerLink="/registration" name="button">Add employee</button>
