--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-light header">
   <div class="container">
 
     <!-- Show this for logged out users -->
@@ -31,7 +31,7 @@
 
     <!-- Show this for logged in users -->
     <ul *ngIf="isAuthenticated"
-      class="nav navbar-nav pull-xs-right">
+      class="nav navbar-nav">
 
       <li class="nav-item">
         <a class="nav-link"
@@ -50,7 +50,7 @@
         </a>
       </li>
 
-      <li class="nav-item nav-link">
+      <li class="nav-item nav-link name">
         <a class="nav-link">
           Hello, {{ currentUser.FullName }}
         </a>
