--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,13 +4,13 @@
       <span class="col-md-3"><h2>Timesheets</h2></span>
       <div class="col-md-9">
         <div class="row">
-          <div class="col-md-1"><button (click)="prevDay()">Back</button></div>
+          <div class="col-md-1"><button (click)="prevDay()" class="navigation"><img src="assets/images/left.png" alt=""></button></div>
           <div class="col-md-10">
             <div class="row">
-              <span class="col-md-2" *ngFor="let time of interval">{{ time.format('MM/DD') }}</span>
+              <span class="col-md-2 text-center" *ngFor="let time of interval">{{ time.format('MM/DD') }}</span>
             </div>
           </div>
-          <div class="col-md-1"><button (click)="nextDay()">Forward</button></div>
+          <div class="col-md-1"><button (click)="nextDay()" class="navigation"><img src="assets/images/right.png" alt=""></button></div>
         </div>
       </div>
     </div>
