--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="!isSubmitting" class="row">
   <h1 class="text-center">{{ project.Name }}</h1>
-  <div class="col-md-offset-4 col-md-3 info">
+  <div class="col-md-1 col-md-offset-3"><img src="assets/images/project.png" alt=""><button class="btn btn-primary btn-dashboard" [routerLink]="['/dashboard', project.Id]">Dashboard</button></div>
+  <div class="col-md-3 info">
     <div><b>Customer: </b>{{ project.CustomerName }}</div>
     <div><b>Start Date: </b>{{ moment(project.StartDate).format('DD-MM-YYYY') }}</div>
     <div><b>End Date: </b>{{ moment(project.EndDate ).format('DD-MM-YYYY') }}</div>
     <div><b>Description:</b></div>
     <p>{{ project.Description }}</p>
-    <button class="btn btn-primary" [routerLink]="['/dashboard', project.Id]">Dashboard</button>
   </div>
 
   <div class="col-md-offset-2 col-md-8">
