--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -21,7 +21,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link"
-          routerLink="/register"
+          routerLink="/registration"
           routerLinkActive="active">
           Sign up
         </a>
