add role to main page

--- a/src/app/add-project-page/add-project-page.component.html
+++ b/src/app/add-project-page/add-project-page.component.html
@@ -7,13 +7,16 @@
     <div>Customer Name</div>
     <input type="text" class="form-control" formControlName="CustomerName">
   </form>
-  <div class="col-md-offset-2 col-md-8 text-center form">
+</div>
+<div class="row">
+  <div class="col-md-12 text-center form">
     <div>Start Date</div>
     <dp-date-picker [(ngModel)]="StartDate"></dp-date-picker>
     <div>End Date</div>
     <dp-date-picker [(ngModel)]="EndDate"></dp-date-picker>
   </div>
-  <div class="col-md-offset-5 col-md-2 text-center button">
-    <button class="btn btn-primary" [disabled]="!projectForm.valid" type="button" (click)="submitProject()">Add Project</button>
+  <div class="col-md-12 text-center button">
+    <button class="btn btn-primary button" [disabled]="!projectForm.valid" type="button" (click)="submitProject()">Add Project</button>
   </div>
+  <div class="text-right col-md-9"><span>*All fields are required</span></div>
 </div>
