--- a/src/app/add-ticket/add-ticket.component.html
+++ b/src/app/add-ticket/add-ticket.component.html
@@ -37,5 +37,6 @@
       <div class="col-md-3"><user-picker-component [chooseUser]="chooseReporter.bind(this)"></user-picker-component></div>
     </div>
     <div class="text-center"><button class="btn btn-primary" type="button" [disabled]="!ticketForm.valid" (click)="submitTicket()">Submit Ticket</button></div>
+    <div class="text-right"><span>*All fields are required</span></div>
   </div>
 </div>
