--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -26,5 +26,6 @@
     <div class="col-md-offset-4 col-md-2">
       <button [disabled]="!registrationForm.valid" type="button" class="btn btn-primary" (click)="submitUser()">Submit</button>
     </div>
+    <div class="text-right col-md-9"><span>*All fields are required</span></div>
   </div>
 </div>
